--- a/materials.html
+++ b/materials.html
@@ -223,7 +223,7 @@
                     </div>
                     <div class="md:w-3/4">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">回复关键词</h3>
-                        <p class="text-gray-600">在公众号对话框中回复资料对应的关键词，获取下载链接</p>
+                        <p class="text-gray-600">在公众号对话框中回复资料[资料领取]，获取下载链接</p>
                     </div>
                 </div>
                 
@@ -268,7 +268,7 @@
                 <div>
                     <h3 class="text-xl font-semibold mb-4">联系方式</h3>
                     <p class="text-gray-400 mb-2"><i class="fa fa-weixin mr-2"></i> 客服微信：xxx123</p>
-                    <p class="text-gray-400"><i class="fa fa-phone mr-2"></i> 联系电话：138-xxxx-xxxx</p>
+                    <p class="text-gray-400"><i class="fa fa-phone mr-2"></i> 联系电话：155-2782-6120</p>
                 </div>
                 
                 <div>
